Har sat alle fiskene ind med animationer

--- a/exd-storcenternord/exd-facts/index-facts.html
+++ b/exd-storcenternord/exd-facts/index-facts.html
@@ -29,38 +29,38 @@
       <button id="tilbage">Tilbage</button>
 
       <div class="image-fish">
-        <div class="image-fish" id="gul-kirurgfisk">
+        <div class="gul-kirurgfisk" id="gul-kirurgfisk">
           <img src="img/gul-kirurgfisk.svg" alt="gul-kirurgfisk" />
         </div>
 
-        <div class="image-fish" id="dvaergkejserfisk">
+        <div class="dvaergkejserfisk" id="dvaergkejserfisk">
           <img src="img/dvaergkejserfisk.svg" alt="dvaergkejserfisk" />
         </div>
 
-        <div class="image-fish" id="paletkirurgfisk">
+        <div class="paletkirurgfisk" id="paletkirurgfisk">
           <img src="img/paletkirurgfisk.svg" alt="paletkirurgfisk" />
         </div>
 
-        <div class="image-fish" id="klovnfisk">
+        <div class="klovnfisk" id="klovnfisk">
           <img src="img/klovnfisk.svg" alt="klovnfisk" />
         </div>
 
-        <div class="image-fish" id="pudsefisk">
+        <div class="pudsefisk" id="pudsefisk">
           <img src="img/pudsefisk.svg" alt="pudsefisk" />
         </div>
 
-        <div class="image-fish" id="hvidstrubet-kirurgfisk">
+        <div class="hvidstrubet-kirurgfisk" id="hvidstrubet-kirurgfisk">
           <img
             src="img/hvidstrubet-kirurgfisk.svg"
             alt="hvidstrubetkirurgfisk"
           />
         </div>
 
-        <div class="image-fish" id="pincetfisk">
+        <div class="pincetfisk" id="pincetfisk">
           <img src="img/pincetfisk.svg" alt="pincetfisk" />
         </div>
 
-        <div class="image-fish" id="sortbaandet-kirurgfisk">
+        <div class="sortbaandet-kirurgfisk" id="sortbaandet-kirurgfisk">
           <img
             src="img/sortbaandet-kirurgfisk.svg"
             alt="sortbaandetkirurgfisk"
