--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -32,7 +32,7 @@
       </div>
 
       <!-- Martin har lavet fiskene og animeret spillet -->
-      <div class="image-bluefish" id="bluefish">
+      <div class="exd-storcenternord/exd-akvarie/img/dvaergkejserfisk.svg" id="dvaergkejserfisk.svg">
         <img src="exd-akvarie/img/bluefish.png" alt="bluefish" />
       </div>
 
