har fjernet min exd-facts, fordi jeg har flytte mine fisk med fakta ind på startsiden

--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -31,23 +31,53 @@
         <img src="exd-akvarie/img/piratskib.png" alt="sunkent piratskib" />
       </div>
 
-      <!-- Martin har lavet fiskene og animeret spillet -->
-      <div class="exd-storcenternord/exd-akvarie/img/dvaergkejserfisk.svg" id="dvaergkejserfisk.svg">
-        <img src="exd-akvarie/img/bluefish.png" alt="bluefish" />
+
+
+
+
+
+
+      <!-- Fiskene i akvariet -->
+      <div class="dvaergkejserfisk.svg" id="dvaergkejserfisk">
+        <img src="exd-akvarie/img/dvaergkejserfisk.svg" alt="dvaergkejserfisk" />
       </div>
 
-      <div class="image-yellowfish" id="yellowfish">
-        <img src="exd-akvarie/img/yellowfish.png" alt="yellowfish" />
+      <div class="gul-kirurgfisk" id="gul-kirurgfisk">
+        <img src="exd-akvarie/img/gul-kirurgfisk.svg" alt="gul-kirurgfisk" />
       </div>
 
-      <div class="image-greenfish" id="greenfish">
-        <img src="exd-akvarie/img/greenfish.png" alt="greenfish" />
+      <div class="hvidstrubet-kirurgfisk" id="hvidstrubet-kirurgfisk">
+        <img src="exd-akvarie/img/hvidstrubet-kirurgfisk.svg" alt="hvidstrubet-kirurgfisk" />
       </div>
 
-      <div class="image-nemofish" id="nemofish">
-        <img src="exd-akvarie/img/nemofish.png" alt="nemofish" />
+      <div class="klovnfisk" id="klovnfisk">
+        <img src="exd-akvarie/img/klovnfisk.svg" alt="klovnfisk" />
       </div>
 
+      <div class="paletkirurgfisk" id="paletkirurgfisk">
+        <img src="exd-akvarie/img/paletkirurgfisk.svg" alt="paletkirurgfisk" />
+      </div>
+
+      <div class="pincetfisk" id="pincetfisk">
+        <img src="exd-akvarie/img/pincetfisk.svg" alt="pincetfisk" />
+      </div>
+
+      <div class="pudsefisk" id="pudsefisk">
+        <img src="exd-akvarie/img/pudsefisk.svg" alt="pudsefisk" />
+      </div>
+
+      <div class="sortbaandet-kirurgfisk" id="sortbaandet-kirurgfisk">
+        <img src="exd-akvarie/img/sortbaandet-kirurgfisk.svg" alt="sortbaandet-kirurgfisk" />
+      </div>
+
+
+
+
+
+
+
+
+      
       <button class="image-button" id="play-button">
         <a href="exd-spil/index-spil.html"
           ><img src="exd-akvarie/img/play.png" alt="play-button" />
@@ -55,11 +85,10 @@
         >
       </button>
 
-      <button class="image-button" id="fish-button">
+      
+
+       <button class="image-button" id="fish-button">
         <a href="exd-facts/index-facts.html">
-          <img src="exd-akvarie/img/fishfacts.png" alt="fish-button" />
-          <span> Fiske fakta </span></a
-        >
       </button>
 
       <!-- Oliver har lavet og animeret skattekisten -->
