Tilføjet og fjernet kommentar

--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -38,7 +38,7 @@
 
 
       <!-- Fiskene i akvariet -->
-      <div class="dvaergkejserfisk.svg" id="dvaergkejserfisk">
+      <div class="dvaergkejserfisk" id="dvaergkejserfisk">
         <img src="exd-akvarie/img/dvaergkejserfisk.svg" alt="dvaergkejserfisk" />
       </div>
 
