lavet en koral vector

--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -97,6 +97,12 @@
       </div>
     </section>
 
+
+    <div class="koral" id="koral">
+        <img src="exd-akvarie/img/koral.png" alt="koral" />
+      </div>
+    </section>
+
     <!-- Fakta pop-up boks -->
     <div id="tooltip" class="facts"></div>
 
