Indsat flere koraler vector med animation

--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -79,6 +79,16 @@
       </div>
     </section>
 
+    <div class="pink-koral" id="pink-koral">
+        <img src="exd-akvarie/img/vector/pink-koral.png" alt="pink-koral" />
+      </div>
+    </section>
+
+    <div class="lilla-koral" id="lilla-koral">
+        <img src="exd-akvarie/img/vector/lilla-koral.png" alt="lilla-koral" />
+      </div>
+    </section>
+
 
     <!-- KNAP TIL SPIL -->
       <button class="image-button" id="play-button">
