--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -93,7 +93,7 @@
     <!-- KNAP TIL SPIL -->
       <button class="image-button" id="play-button">
         <a href="exd-spil/index-spil.html"
-          ><img src="exd-akvarie/img/play.png" alt="play-button" />
+          ><img src="exd-akvarie/img/spil-knap.png" alt="play-button" />
       </button>
 
     
