--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -89,12 +89,19 @@
       </div>
     </section>
 
+    <!-- KLIK BILLEDE -->
+    <div class="vector-klik" id="vector-klik">
+      <img src="exd-akvarie/img/vector/vector-klik.png" alt="klik" />
+    </div>
+
 
     <!-- KNAP TIL SPIL -->
       <button class="image-button" id="play-button">
         <a href="exd-spil/index-spil.html"
           ><img src="../exd-storcenternord/exd-akvarie/img/spil-knap.png" alt="play-button" />
       </button>
+
+
 
     
 
