--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -94,11 +94,15 @@
       <img src="exd-akvarie/img/vector/vector-klik.png" alt="klik" />
     </div>
 
+    <div class="sostjerne" id="sostjerne">
+      <img src="exd-akvarie/img/vector/sostjerne.png" alt="sostjerne" />
+    </div>
+
 
     <!-- KNAP TIL SPIL -->
       <button class="image-button" id="play-button">
         <a href="exd-spil/index-spil.html"
-          ><img src="../exd-storcenternord/exd-akvarie/img/spil-knap.png" alt="play-button" />
+          ><img src="../exd-storcenternord/exd-akvarie/img/spilknap/spil-knap.png" alt="play-button" />
       </button>
 
 
