Har rettet fejl og fået det til at stå pænere

--- a/exd-storcenternord/exd-spil/index-spil.html
+++ b/exd-storcenternord/exd-spil/index-spil.html
@@ -26,7 +26,7 @@
     <button
       id="tilbage"
       type="button"
-      onclick="window.location.href='../exd-akvarie/index.html'"
+      onclick="window.location.href='../exd-akvarie/index-akvarie.html'"
     >
       Tilbage
     </button>
@@ -49,7 +49,7 @@
       <div id="orm-point">
         <img id="orm-img" src="../exd-spil/img/orm-point.png" alt="orm" />
       </div>
-
+    </div>
 
     <!-- LYDE -->
     <audio id="movementSound">
