--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -96,14 +96,9 @@
       </div>
 
       <!-- KNAP TIL SPIL -->
-      <button class="image-button" id="play-button">
-        <a href="exd-spil/index-spil.html">
-          <img
-            src="../exd-storcenternord/exd-akvarie/img/spilknap/spil-knap.png"
-            alt="play-button"
-          />
-        </a>
-      </button>
+      <a class="image-button" id="play-button" href="exd-spil/index-spil.html">
+        <img src="exd-akvarie/img/spilknap/spil-knap.png" alt="play-button" />
+      </a>
     </section>
 
     <!-- Fakta pop-up boks -->
