--- a/exd-storcenternord/index-akvarie.html
+++ b/exd-storcenternord/index-akvarie.html
@@ -10,9 +10,7 @@
       href="exd-akvarie/img/bubbles.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="exd-akvarie/css/style.css" />
-    <!-- Den her gjorde ikke noget særligt, så jeg har fjernet den:
-    <link rel="html" href="../exd-spil/index.html" /> -->
+    <link rel="stylesheet" href="exd-akvarie/css/akvarie.css" />
   </head>
 
   <body>
@@ -104,6 +102,6 @@
     <!-- Fakta pop-up boks -->
     <div id="tooltip" class="facts"></div>
 
-    <script src="exd-akvarie/js/animate-objects-on-road.js"></script>
+    <script src="exd-akvarie/js/akvarie.js"></script>
   </body>
 </html>
