--- a/exd-storcenternord/exd-spil/index-spil.html
+++ b/exd-storcenternord/exd-spil/index-spil.html
@@ -32,7 +32,7 @@
 
     </div> 
 
-    <!-- LYD  -->
+    <!-- LYDE  -->
     <audio id="movementSound">
       <source src="sound/movement_sound.mp3" type="audio/mp3" />
     </audio>
