Ændret min mappe struktur

--- a/exd-spil/index-spil.html
+++ b/exd-spil/index-spil.html
@@ -25,7 +25,7 @@
       </div>
       <!-- tilbage knap -->
       <div id="tilbage-knap">
-        <button id="tilbage" onclick="window.location.href='../exd-akvarie/index-akvarie.html'">
+        <button id="tilbage" onclick="window.location.href='../exd-akvarie/index.html'">
           <img src="img/tilbage/tilbage-knap.png" alt="Tilbage" />
         </button>
       </div>
